Newest  version of FORUM

--- a/package.json
+++ b/package.json
@@ -7,7 +7,13 @@
     "dev": "next dev --turbo",
     "dev:fast": "SKIP_ENV_VALIDATION=1 next dev --turbo",
     "lint": "next lint",
-    "start": "next start"
+    "start": "next start",
+    "backup:db": "node scripts/backup_database.js",
+    "backup:storage": "node scripts/backup_storage.js",
+    "backup:all": "npm run backup:db && npm run backup:storage",
+    "cleanup:db": "node scripts/cleanup_database.js",
+    "cleanup:storage": "node scripts/cleanup_storage.js",
+    "cleanup:all": "npm run cleanup:db && npm run cleanup:storage"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
@@ -48,6 +54,7 @@
     "clsx": "^2.1.1",
     "cmdk": "1.0.4",
     "date-fns": "latest",
+    "dotenv": "^16.6.1",
     "embla-carousel-react": "8.5.1",
     "geist": "^1.3.1",
     "input-otp": "1.4.1",
